Add cancel button in loadingAlert

--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXo-i3-7RG">
                                         <rect key="frame" x="15.666666666666657" y="348" width="359" height="359"/>
-                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="359" id="O4g-QZ-iza"/>
                                             <constraint firstAttribute="width" secondItem="AXo-i3-7RG" secondAttribute="height" multiplier="1:1" id="QM4-jl-Tqm"/>
@@ -193,7 +193,7 @@
                                     </view>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="epW-zR-Ldq">
                                         <rect key="frame" x="65.666666666666686" y="0.0" width="309" height="338"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="jca-27-zMF">
                                             <size key="itemSize" width="351" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -245,7 +245,7 @@
                                                                                             <subviews>
                                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dW7-SW-oKb">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="63" height="63"/>
-                                                                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                    <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                     <constraints>
                                                                                                         <constraint firstAttribute="width" secondItem="dW7-SW-oKb" secondAttribute="height" multiplier="1:1" id="cK6-Z4-zo2"/>
                                                                                                     </constraints>
@@ -301,7 +301,7 @@
                                                                                                 <constraint firstAttribute="bottom" secondItem="bGD-m1-F2A" secondAttribute="bottom" id="uAD-6U-9JS"/>
                                                                                             </constraints>
                                                                                         </collectionViewCellContentView>
-                                                                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                        <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     </collectionViewCell>
                                                                                 </cells>
                                                                                 <connections>
@@ -317,7 +317,7 @@
                                                                             <constraint firstAttribute="trailing" secondItem="QGZ-jq-dU3" secondAttribute="trailingMargin" id="otT-D4-cly"/>
                                                                         </constraints>
                                                                     </collectionViewCellContentView>
-                                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <size key="customSize" width="168" height="73"/>
                                                                     <connections>
                                                                         <outlet property="previewImageCollection" destination="QGZ-jq-dU3" id="XRg-5V-fLf"/>
@@ -349,7 +349,7 @@
                                                                                             <subviews>
                                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3eg-Mn-2l2">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="67" height="62"/>
-                                                                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                    <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                 </imageView>
                                                                                                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K8x-ny-mLD">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="67" height="62"/>
@@ -415,7 +415,7 @@
                                                                                                 <constraint firstAttribute="bottom" secondItem="Aic-UI-XMN" secondAttribute="bottom" id="P8L-Qc-wnn"/>
                                                                                             </constraints>
                                                                                         </collectionViewCellContentView>
-                                                                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                        <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <size key="customSize" width="51" height="62"/>
                                                                                     </collectionViewCell>
                                                                                 </cells>
@@ -461,7 +461,7 @@
                                                                             <constraint firstAttribute="bottom" secondItem="Bf2-JC-lW5" secondAttribute="bottom" id="txS-5T-QSc"/>
                                                                         </constraints>
                                                                     </collectionViewCellContentView>
-                                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <size key="customSize" width="168" height="69"/>
                                                                     <connections>
                                                                         <outlet property="layerCollection" destination="Bf2-JC-lW5" id="EXP-oM-2ZL"/>
@@ -478,7 +478,7 @@
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MVO-Yd-9er">
                                                                     <rect key="frame" x="0.0" y="0.0" width="93" height="93"/>
-                                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="MVO-Yd-9er" secondAttribute="height" multiplier="1:1" id="ome-VN-pjp"/>
                                                                     </constraints>
@@ -558,7 +558,7 @@
                                                         <constraint firstAttribute="bottom" secondItem="Kdi-h0-gm8" secondAttribute="bottom" constant="5" id="tCR-0s-BAp"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="customSize" width="299" height="108"/>
                                                 <connections>
                                                     <outlet property="PreviewAndLayerCVC" destination="Kct-qN-3Rn" id="d8m-AN-Li2"/>
@@ -739,7 +739,7 @@
                                                         <constraint firstItem="EHP-V4-OSZ" firstAttribute="top" secondItem="cb8-R4-sOD" secondAttribute="top" constant="5" id="xGv-XD-6zU"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="customSize" width="298" height="97"/>
                                                 <connections>
                                                     <outlet property="colorCollectionList" destination="tIl-av-I22" id="oZL-DG-y10"/>
@@ -811,14 +811,14 @@
                                                         </collectionView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3C-6x-Ksl">
                                                             <rect key="frame" x="15.000000000000004" y="5" width="57.333333333333343" height="86"/>
-                                                            <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="0.29999999999999999" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="y3C-6x-Ksl" secondAttribute="height" multiplier="2:3" id="b7y-99-aZZ"/>
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B8Z-lm-5oq">
                                                             <rect key="frame" x="19.000000000000004" y="9" width="49.333333333333343" height="37"/>
-                                                            <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPi-m0-qBO">
                                                             <rect key="frame" x="19.000000000000004" y="50" width="49.333333333333343" height="37"/>
@@ -874,7 +874,7 @@
                                                         <constraint firstItem="sPi-m0-qBO" firstAttribute="leading" secondItem="y3C-6x-Ksl" secondAttribute="leading" constant="4" id="wQW-Uh-PyE"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="customSize" width="298" height="96"/>
                                                 <connections>
                                                     <outlet property="drawingModeToggleView" destination="y3C-6x-Ksl" id="WcK-dd-2A1"/>
@@ -1250,7 +1250,7 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Txf-Hy-HK0">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="Txf-Hy-HK0" secondAttribute="height" multiplier="1:1" id="8E7-38-7gh"/>
                                                     </constraints>
@@ -1326,10 +1326,13 @@
         <scene sceneID="YxS-dJ-QuB">
             <objects>
                 <tabBarController storyboardIdentifier="MainTabBarController" id="UOM-Zj-RAt" customClass="MainTabBarController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YG0-ry-b7Z">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="YG0-ry-b7Z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="1kb-Ea-JOf" kind="relationship" relationship="viewControllers" id="wve-ne-FiX"/>
