--- a/spriteMaker/spriteMaker/PopupStoryboards/LayerOptionPopup.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/LayerOptionPopup.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +33,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ppb-uA-vR6" secondAttribute="height" multiplier="1:1" id="6sH-Nv-TQb"/>
                                         </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" name="Icon"/>
                                         <state key="normal" image="trash" catalog="system"/>
                                         <connections>
                                             <action selector="tappedDelete:" destination="VTc-F7-mov" eventType="touchUpInside" id="UfT-dj-YmU"/>
@@ -42,14 +44,14 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="nL7-L4-Lmd" secondAttribute="height" multiplier="1:1" id="4zC-M8-dYC"/>
                                         </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" name="Icon"/>
                                         <state key="normal" image="eye.slash" catalog="system"/>
                                         <connections>
                                             <action selector="tappedHidden:" destination="VTc-F7-mov" eventType="touchUpInside" id="Nkj-ii-7hQ"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.17599271520000001" green="0.17599271520000001" blue="0.17599271520000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" name="Color3"/>
                                 <constraints>
                                     <constraint firstItem="nL7-L4-Lmd" firstAttribute="leading" secondItem="FaU-UK-2Sh" secondAttribute="leading" constant="5" id="CEn-6E-qgm"/>
                                     <constraint firstItem="ppb-uA-vR6" firstAttribute="width" secondItem="nL7-L4-Lmd" secondAttribute="width" multiplier="1.15" id="K36-yX-3ar"/>
@@ -94,5 +96,11 @@
     <resources>
         <image name="eye.slash" catalog="system" width="128" height="86"/>
         <image name="trash" catalog="system" width="121" height="128"/>
+        <namedColor name="Color3">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Icon">
+            <color white="0.40000000596046448" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </namedColor>
     </resources>
 </document>
